# DWARF

./: .gitignore  CODEOWNERS  INSTALL.md  OPERATIONS.md  README.md  RELEASE-NOTES.md  TEST-OUTPUTS.md
antithesis/amaru-single/: README.md  setup-complete.sh
antithesis/cardano_node_dwarf/: README.md  docker-compose.eclipse.yml  docker-compose.yaml  docker-compose.yaml.bak  relay-dwarf-topology.json  relay-eclipse-topology.json
antithesis/cardano_node_dwarf_baked/: baked-blocks.cbor  docker-compose.yaml  relay-baked-topology.json
antithesis/cardano_node_dwarf_eclipse/: README.md  docker-compose.yaml
antithesis/components/dwarf-adversary/: .gitignore  COVERAGE-HARNESS.md  Codec.hs  Connection.hs  Dockerfile  Dockerfile.fuzz  DwarfAdversary.hs  Main.hs  MutatingCodec.hs  Server.hs  build-fuzz-image.sh  build-image.sh  dwarf-adversary.cabal
antithesis/components/dwarf-adversary/DwarfAdversary/: Application.hs
antithesis/components/dwarf-adversary/DwarfAdversary/ChainSync/: Codec.hs  Connection.hs  Server.hs
antithesis/components/dwarf-adversary/app/: Main.hs
antithesis/components/dwarf-adversary/composer/cbor-fuzz/: finally_fuzz_summary.sh
antithesis/components/dwarf-adversary/corpora/block/: blk-000.cbor  blk-001.cbor  blk-002.cbor  blk-003.cbor  blk-004.cbor  blk-005.cbor  blk-006.cbor  blk-007.cbor  blk-008.cbor  blk-009.cbor  blk-010.cbor  blk-011.cbor  blk-012.cbor  blk-013.cbor  blk-014.cbor  blk-015.cbor  blk-016.cbor  blk-017.cbor  blk-018.cbor  blk-019.cbor  blk-020.cbor  blk-021.cbor  blk-022.cbor  blk-023.cbor  blk-024.cbor  blk-025.cbor  blk-026.cbor  blk-027.cbor  blk-028.cbor  blk-029.cbor  blk-030.cbor  blk-031.cbor  blk-032.cbor  blk-033.cbor  blk-034.cbor  blk-035.cbor  blk-036.cbor  blk-037.cbor  blk-038.cbor  blk-039.cbor  (+160 more)
antithesis/components/dwarf-adversary/corpora/conwaytx/: ctx-00.cbor  ctx-01.cbor  ctx-02.cbor  ctx-03.cbor  ctx-04.cbor  ctx-05.cbor  ctx-06.cbor  ctx-07.cbor  ctx-08.cbor  ctx-09.cbor  ctx-10.cbor  ctx-11.cbor
antithesis/components/dwarf-adversary/corpora/handshake/: accept.cbor  refuse.cbor  reply-empty.cbor  reply-v.cbor
antithesis/components/dwarf-adversary/corpora/keepalive/: ka-req.cbor  ka-resp-0.cbor  ka-resp-42.cbor
antithesis/components/dwarf-adversary/corpora/tx/: cap-3b99d9f7f7a2952c.cbor  cap-50dd3372d5c9317c.cbor  cap-96f6b788564aeb1c.cbor  cap-9a7e41c3588f806c.cbor  cap-aff02194bfcf28b2.cbor  cap-c19434f1daa1f53a.cbor  cap-c8e702fdb4198741.cbor  cap-c99354f381f5e3aa.cbor  cap-e46519b68693d4dd.cbor  cap-ec402aa0c9e14c25.cbor
antithesis/components/dwarf-adversary/corpora/txbody/: tb-00.cbor  tb-01.cbor  tb-02.cbor  tb-03.cbor  tb-04.cbor  tb-05.cbor  tb-06.cbor  tb-07.cbor  tb-08.cbor  tb-09.cbor  tb-10.cbor  tb-11.cbor
antithesis/components/dwarf-adversary/corpora/txsub/: req-ids-bl.cbor  req-ids-nb.cbor
antithesis/components/dwarf-adversary/coverage-docker/: .dockerignore  Dockerfile  build.sh  run.sh
antithesis/components/dwarf-adversary/coverage-docker/sancov/: .gitignore  GhcSancov.cpp  README.md  ghcw.sh  libsancovrt.c  linkwrap.sh  optwrap.sh
antithesis/components/dwarf-adversary/fuzz/: Main.hs
antithesis/components/dwarf-adversary/fuzz-one/: Main.hs
antithesis/components/dwarf-adversary/fuzz-persist/: Main.hs  afl_persist_shim.c
antithesis/components/dwarf-adversary/fuzz-surface/: Main.hs
antithesis/components/dwarf-adversary/ledger-genesis/: alonzo-genesis.json  conway-genesis.json  shelley-genesis.json
antithesis/components/dwarf-adversary/snapshot-decode/: Main.hs
antithesis/components/dwarf-adversary/src/DwarfAdversary/: Application.hs  ApplyBlock.hs  BlockSource.hs  Fuzz.hs  HeaderSource.hs  MiniProtocolDecode.hs  SDK.hs  Surfaces.hs  TxSource.hs
antithesis/components/dwarf-adversary/src/DwarfAdversary/BlockFetch/: MutatingCodec.hs
antithesis/components/dwarf-adversary/src/DwarfAdversary/ChainSync/: Codec.hs  Connection.hs  MutatingCodec.hs  Server.hs
antithesis/components/dwarf-adversary/src/DwarfAdversary/TxSubmission/: Client.hs  MutatingCodec.hs  Target.hs
antithesis/components/dwarf-adversary/test/: FuzzSpec.hs
antithesis/components/dwarf-adversary/tools/: gen-cov-corpora.py
antithesis/mixed-haskell-amaru/: README.md
delivery/: docker-compose.dwarf.yml
delivery/audit/: M2-DWARF-DIRECTORY-AUDIT.md
delivery/scripts/: build-image.sh  common.sh  deploy.sh  install.sh  status.sh  undeploy.sh  uninstall.sh
delivery/tests/: test_delivery_contract.sh
docs/: index.html
dwarf/: README.md  cardano-profile
dwarf/antithesis_devnet/: Dockerfile  build.sh
dwarf/antithesis_workload/: Dockerfile  workload.py
dwarf/dashboard/: index.html
dwarf/devnet-build/: cardano-node.Dockerfile
dwarf/extractors/cardano-debug-epoch-state-extractor/: Cargo.toml
dwarf/extractors/cardano-debug-epoch-state-extractor/src/: lib.rs  main.rs
dwarf/targets/amaru/: Cargo.toml
dwarf/targets/cardano-node/: .gitignore  README.md  cabal.project  dwarf-cardano-shims.cabal
dwarf/targets/cardano-node/src/: DecodeAuxiliaryData.hs  DecodeBlock.hs  DecodeBlockFetch.hs  DecodeBlockHeader.hs  DecodeCertificate.hs  DecodeChainSync.hs  DecodeHandshake.hs  DecodeKeepAlive.hs  DecodeLocalStateQuery.hs  DecodeLocalTxMonitor.hs  DecodeLocalTxSubmission.hs  DecodePeerSharing.hs  DecodeTxBody.hs  DecodeTxSubmission.hs
reports/: README.md
tests/: test_antithesis_backend.py  test_antithesis_cli.py  test_antithesis_emitter.py  test_antithesis_mixed_emitter.py  test_antithesis_moog_validate.py  test_antithesis_phase3a.py  test_antithesis_profile.py  test_antithesis_workload.py  test_moog_integration.py  test_remote.py
tools/: campaign_results.json  generate_campaign_report.py  reject_oracle.sh  sp1_closure.py  sp1_merge_registry.py  sp1_validate_all.sh  sp2_roundtrip.sh  sp3_caughtup_repro.sh  sp3a_baked_repro.sh  sp3a_blockfetch_campaign.sh  sp3a_eclipse_repro.sh  sp3a_repro.sh  sp3a_roundtrip.sh  sp3a_selftest.sh  sp3a_topology_eclipse_repro.sh  sp3b_repro.sh  sp3b_roundtrip.sh  sp3b_selftest.sh  stage1_install_shims.py  stage1_verify.sh  test_sp1.py  test_sp2_generator.py  test_stage1.py
(+1674 files in other folders)
