cabal-version:   3.0
name:            dwarf-adversary
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          Dwarf / Cyber-Castellum
maintainer:      security@cyber-castellum
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common settings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wname-shadowing
    -Wdeferred-out-of-scope-variables -Wpartial-type-signatures
    -Wredundant-constraints

  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          settings
  hs-source-dirs:  src
  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-strict-containers
    , cborg
    , containers
    , contra-tracer
    , data-default
    , directory
    , filepath
    , io-classes
    , microlens
    , network
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-cardano   ^>=0.25
    , ouroboros-consensus-protocol
    , ouroboros-network
    , ouroboros-network-api
    , ouroboros-network-framework
    , ouroboros-network-mock
    , ouroboros-network-protocols
    , random
    , serialise
    , small-steps
    , strict-stm
    , text
    , time
    , typed-protocols

  exposed-modules:
    DwarfAdversary
    DwarfAdversary.ApplyBlock
    DwarfAdversary.Surfaces
    DwarfAdversary.Application
    DwarfAdversary.BlockFetch.MutatingCodec
    DwarfAdversary.BlockSource
    DwarfAdversary.ChainSync.Codec
    DwarfAdversary.ChainSync.Connection
    DwarfAdversary.ChainSync.MutatingCodec
    DwarfAdversary.ChainSync.Server
    DwarfAdversary.Fuzz
    DwarfAdversary.TxSubmission.Client
    DwarfAdversary.TxSubmission.MutatingCodec
    DwarfAdversary.TxSubmission.Target
    DwarfAdversary.HeaderSource
    DwarfAdversary.MiniProtocolDecode
    DwarfAdversary.SDK
    DwarfAdversary.TxSource

  other-modules:

executable dwarf-adversary
  import:         settings
  main-is:        Main.hs
  build-depends:
    , dwarf-adversary
    , aeson
    , base
    , bytestring
    , io-classes
    , network
    , optparse-applicative
    , ouroboros-network
    , ouroboros-network-api
    , ouroboros-network-mock
    , random
    , strict-stm
    , text
    , time

  hs-source-dirs: app

executable dwarf-decoder-fuzz
  import:         settings
  main-is:        Main.hs
  build-depends:
    , dwarf-adversary
    , aeson
    , base
    , bytestring
    , cborg
    , directory
    , filepath
    , random
    , time

  hs-source-dirs: fuzz

executable dwarf-decode-one
  import:         settings
  main-is:        Main.hs
  build-depends:
    , dwarf-adversary
    , base
    , bytestring
    , cborg

  hs-source-dirs: fuzz-one

executable dwarf-decode-any
  import:         settings
  main-is:        Main.hs
  build-depends:
    , dwarf-adversary
    , aeson
    , base
    , bytestring
    , cborg
    , containers
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-strict-containers
    , data-default
    , filepath
    , microlens
    , small-steps
    , time

  hs-source-dirs: fuzz-surface

-- NOTE: an AFL persistent-mode harness (fuzz-persist/) was prototyped to lift
-- the ~82 execs/s fork-per-exec ceiling. AFL engages persistent + shared-memory
-- mode, but the deferred forkserver forks AFTER the GHC RTS is initialized and
-- the persistent child hangs (calibration times out; -V0 -I0 did not help) --
-- the known managed-runtime persistent-fork incompatibility. Left unbuilt; the
-- realistic speedup is shrinking the whole-tree SanCov map (see COVERAGE-HARNESS.md).

executable dwarf-snapshot-decode
  import:         settings
  main-is:        Main.hs
  build-depends:
    , dwarf-adversary
    , base
    , fs-api
    , mtl
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , serialise

  hs-source-dirs: snapshot-decode

test-suite dwarf-adversary-test
  import:             settings
  other-modules:      FuzzSpec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , dwarf-adversary
    , base
    , bytestring
    , cborg
    , hspec
    , QuickCheck
    , random
    , serialise
    , text

  build-tool-depends: hspec-discover:hspec-discover
